# PyAthena

./: .gitignore  .travis.yml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.rst  circle.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: docs-trigger.yaml  docs.yaml  release.yaml  requirements.txt  test.yaml
benchmark/20180915/: Pipfile  README.rst  benchmark.py  pypi_downloads_20180915.sql
benchmark/20220201/: README.rst  benchmark.py
benchmarks/: benchmark.py
benchmarks/20180915/: benchmark.py
benchmarks/20220201/: benchmark.py  pypi_downloads_20220201.sql
docs/: api.rst  arrow.rst  conf.py  cursor.rst  index.rst  introduction.rst  null_handling.rst  pandas.rst  polars.rst  s3fs.rst  spark.rst  sqlalchemy.rst  testing.rst  usage.rst
docs/_static/: custom.css
docs/_templates/: versioning.html
docs/api/: arrow.rst  connection.rst  converters.rst  errors.rst  filesystem.rst  models.rst  pandas.rst  polars.rst  s3fs.rst  spark.rst  sqlalchemy.rst  utilities.rst
pyathena/: __init__.py  async_cursor.py  async_pandas_cursor.py  calc_cursor.py  common.py  connection.py  converter.py  cursor.py  error.py  formatter.py  model.py  pandas_cursor.py  result_set.py  sqlalchemy_athena.py  util.py
pyathena/alembic/: base.py
pyathena/arrow/: async_cursor.py  converter.py  cursor.py  result_set.py  util.py
pyathena/fastparquet/: util.py
pyathena/filesystem/: s3.py  s3_object.py
pyathena/pandas/: __init__.py  async_cursor.py  converter.py  cursor.py  result_set.py  util.py
pyathena/polars/: async_cursor.py  converter.py  cursor.py  result_set.py  util.py
pyathena/s3fs/: async_cursor.py  converter.py  cursor.py  reader.py  result_set.py
pyathena/spark/: async_cursor.py  async_spark_cursor.py  common.py  cursor.py  spark_cursor.py
pyathena/sqlalchemy/: arrow.py  base.py  compiler.py  constants.py  pandas.py  polars.py  preparer.py  requirements.py  rest.py  s3fs.py  types.py  util.py
requirements/: requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.12.txt  requirements-test.py3.13.txt  requirements-test.py3.8.txt  requirements-test.py3.9.txt  requirements.txt
scripts/: upload_test_data.sh
scripts/cloudformation/: github_actions_oidc.yaml
scripts/test_data/: delete_test_data.sh  integer_na_values.tsv  one_row_complex.tsv  upload_test_data.sh
tests/: __init__.py  conftest.py  test_async_cursor.py  test_async_pandas_cursor.py  test_cursor.py  test_formatter.py  test_model.py  test_pandas_cursor.py  test_pyathena.py  test_result_set.py  test_sqlalchemy_athena.py  test_sqlalchemy_create_table.py  test_util.py  util.py
tests/arrow/: test_async_cursor.py  test_cursor.py  test_util.py
tests/fastparquet/: test_util.py
tests/filesystem/: test_s3.py  test_s3_object.py
tests/pandas/: test_async_cursor.py  test_async_pandas_cursor.py  test_cursor.py  test_pandas_cursor.py  test_util.py
tests/pyathena/: conftest.py  test_async_cursor.py  test_converter.py  test_cursor.py  test_formatter.py  test_model.py  test_util.py  util.py
tests/pyathena/arrow/: test_async_cursor.py  test_cursor.py  test_util.py
tests/pyathena/filesystem/: test_s3.py  test_s3_object.py
tests/pyathena/pandas/: test_async_cursor.py  test_cursor.py  test_util.py
tests/pyathena/polars/: test_async_cursor.py  test_cursor.py
tests/pyathena/s3fs/: test_async_cursor.py  test_cursor.py  test_reader.py
tests/pyathena/spark/: test_async_cursor.py  test_async_spark_cursor.py  test_spark_cursor.py
tests/pyathena/sqlalchemy/: test_base.py  test_compiler.py  test_types.py
tests/resources/queries/: create_database.sql.jinja2  create_table.sql.jinja2  drop_database.sql.jinja2  insert_into_table.sql.jinja2
tests/resources/rows/: boolean_na_values.tsv  spark_group_by.csv
tests/sql/: create_database.sql  create_table.sql  drop_database.sql  insert_into_table.sql  insert_overwrite_table.sql
tests/sqlalchemy/: __init__.py  conftest.py  test_base.py  test_suite.py
