[project]
name = "PyAthena"
description = "Python DB API 2.0 (PEP 249) client for Amazon Athena"
authors = [
    {name = "laughingman7743", email = "laughingman7743@gmail.com"},
]
dependencies = [
    "boto3>=1.26.4",
    "botocore>=1.29.4",
    "tenacity>=4.1.0",
    "fsspec",
]
requires-python = ">=3.8.1"  # https://bugs.python.org/issue38342
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/laughingman7743/PyAthena/"
repository = "https://github.com/laughingman7743/PyAthena/"

[project.entry-points."sqlalchemy.dialects"]
awsathena = "pyathena.sqlalchemy.base:AthenaDialect"
"awsathena.rest" = "pyathena.sqlalchemy.rest:AthenaRestDialect"
"awsathena.pandas" = "pyathena.sqlalchemy.pandas:AthenaPandasDialect"
"awsathena.arrow" = "pyathena.sqlalchemy.arrow:AthenaArrowDialect"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=1.0.0"]
pandas = ["pandas>=1.3.0"]
arrow = ["pyarrow>=7.0.0"]
fastparquet = ["fastparquet>=0.4.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "tox",
    "tox-gh-actions",
    "wheel",
    "twine",
    "sqlalchemy>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
    "numpy>=1.26.0;python_version>=\"3.9\"",
    "pyarrow>=7.0.0",
    "fastparquet>=0.4.0",
    "Jinja2>=3.1.0",
    "mypy>=0.900",
    "pytest>=3.5",
    "pytest-cov",
    "pytest-xdist",
    "pytest-dependency",
    "ruff>=0.1.13",
]

[tool.pdm.version]
source = "file"
path = "pyathena/__init__.py"

[tool.pdm.build]
includes = ["pyathena", "pyathena/py.typed"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39,310,311,312},py{38,39,310,311,312}-sqla

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
allowlist_externals =
    pdm
    make
commands =
    pdm install -v --dev
    make test
passenv =
    AWS_*
    TOXENV
    GITHUB_*

[testenv:py{38,39,310,311,312}-sqla]
commands =
    pdm install -v --dev
    make test-sqla
"""

[tool.pytest.ini_options]
norecursedirs = ["benchmarks", ".tox", ".venv"]

[tool.sqla_testing]
requirement_cls = "pyathena.sqlalchemy.requirements:Requirements"
profile_file = "tests/sqlalchemy/profiles.txt"

[tool.ruff]
line-length = 100
exclude = [
    ".venv",
    ".tox",
    "tests"
]
target-version = "py38"
# https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    # "SIM",  # flake8-simplify
    # "B",  # flake8-bugbear
    # "C4",  # flake8-comprehensions
    # "UP",  # pyupgrade
]

[tool.mypy]
python_version = 3.8
follow_imports = "silent"
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
allow_redefinition = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
exclude = ["benchmarks.*", "tests.*", ".tox.*", ".venv.*"]
